--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,11 @@ click==8.1.3
 colorama==0.4.4
 Django==4.0.4
 django-js-asset==2.0.0
+django-json-widget==1.1.1
 django-mptt==0.13.4
 environs==9.5.0
 frozenlist==1.3.0
+future==0.18.2
 gunicorn==20.1.0
 h11==0.13.0
 idna==3.3
