--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 services:
   marketplace:
     build: .
-    command: sh -c "python3 manage.py makemigrations marketplace;
-                    python3 manage.py migrate;
-                    python3 manage.py collectstatic --noinput;
-                    python3 app.py"
+    command: sh -c "python3 manage.py makemigrations marketplace; python3 manage.py migrate; python3 manage.py collectstatic --noinput; python3 manage.py createsuperuser --noinput --username $DJANGO_USERNAME --email lol@lol.ru; python3 app.py"
     ports:
       # - 192.168.1.3:80:8001
       - 8001:8001
